fix bug & add backend test
